# graphtope

./: CLAUDE.md  README.md  STATUS.md  Topologic_Graph_Grammar_Spec.md  pyproject.toml
blender/: import_graphtope.py
docs/: Generative_Variation_Research_Plan.md  Topologic_Carrier_Contribution_Briefing.md
graphtope/: __init__.py  _topo.py  alphabet.py  atomic.py  compare.py  compose.py  composite.py  engine.py  exchange.py  generate.py  grammar_dnf.py  grammar_params.py  hierarchy.py  model.py  realise.py  rules.py  serialize.py  shape_iface.py  topoview.py  validity.py
graphtope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01_graphtope.ipynb
notebooks/exports/: variant.mtl  variant.obj.graph.json
tests/: test_atomic.py  test_compose.py  test_composite.py  test_engine.py  test_exchange.py  test_generate.py  test_grammar_dnf.py  test_grammar_params.py  test_hierarchy.py  test_model.py  test_realise.py  test_realmodel.py  test_rules.py  test_topoview.py  test_validity.py
