[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graphtope"
version = "0.1.0"
description = "A topology-driven graph grammar for architecture (Stage 1)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "T. Dounas" }, { name = "W. Jabi" }]
dependencies = [
    "topologicpy>=0.9",
    "networkx>=3.0",   # escape hatch only (matching / nx interop), not a second carrier
]

[project.optional-dependencies]
dev = ["pytest>=7", "jupyter", "ipywidgets"]

[tool.setuptools.packages.find]
include = ["graphtope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
